# challenge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
docs/: api-reference.md  architecture.md  database-migrations.md  development.md  getting-started.md  security.md  troubleshooting.md  usage.md
examples/: advanced_challenge.py  minimal_challenge.py  test_challenge_insert.sql
scripts/: check_file_length.py
src/: __init__.py  config.py
src/api/: __init__.py  health.py  routes_admin.py  routes_public.py  security.py
src/challenge/: decorators.py
src/client/: __init__.py
src/cvm/: __init__.py  client.py
src/db/: migrations.py  sqlalchemy_manager.py
src/dev/: __init__.py  local_db.py
src/orm/: __init__.py  client.py
src/platform_challenge_sdk/: __init__.py  types.py
src/platform_challenge_sdk/api/: server.py
src/platform_challenge_sdk/challenge/: __init__.py  context.py
src/platform_challenge_sdk/client/: http.py  mtls.py  signing.py
src/results/: __init__.py  client.py
src/runtime/: runner.py
src/security/: __init__.py
src/transport/: message_router.py  ws.py
src/values/: client.py
src/websocket/: __init__.py
src/weights/: __init__.py  calculator.py
tests/: test_challenge.py  test_lifecycle_handlers.py  test_migration_runner.py  test_orm_integration.py  test_security_attestation.py  test_security_validation.py  test_websocket_encryption.py
tests/integration/: test_integration_challenge.py
tests/mocks/: __init__.py  mock_tdx.py
tests/unit/: test_orm_bridge.py  test_public_api.py  test_ws_transport.py
(+12 files in other folders)
